--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,3 +1,45 @@
 {% extends "base.html" %}
 {% block title %}Index{% endblock %}
-{% block body %}this is the body of the index page{% endblock %}
+{% block body %}
+<div id="carouselExampleCaptions" class="carousel slide col-9 mx-auto">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="../static/img/openart-image_nsx1oiGT_1716968532588_raw.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block bg-opacity-50 bg-white rounded-pill ">
+                <h5 class="fw-bolder fs-3">Dolly AI</h5>
+                <p class="fw-medium">La nostra prima AI generatrice di testo con cui puoi conversare</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="../static/img/openart-image_Fj-iov5i_1716968070034_raw.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block bg-opacity-50 bg-white rounded-pill">
+                <h5 class="fw-bolder fs-3">Image_generator 1.5-Turbo</h5>
+                <p class="fw-medium">Il nostro modello generatrice di immagini più potente di sempre</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="../static/img/openart-image_WEEev_od_1716968831626_raw.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block bg-opacity-50 bg-white rounded-pill">
+                <h5 class="fw-bolder fs-3">Guida</h5>
+                <p class="fw-medium">Scopri come usare al meglio i nostri prodotti con guide dettagliate</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+{% endblock %}
