--- a/webapp/templates/dolly-3b.html
+++ b/webapp/templates/dolly-3b.html
@@ -1,3 +1,15 @@
 {% extends "base.html" %}
 {% block title %}Dolly 3b{% endblock %}
-{% block body %}this is the body of the Dolly 3b page{% endblock %}
+{% block body %}
+this is the body of the Dolly 3b page
+<br>
+<form action="/dolly-3b" method="post">
+    <textarea rows="10" cols="50" name="prompt" placeholder="promt:"></textarea><br>
+    <input type="submit" value="submit">
+</form>
+<br>
+<h2>the AI says:</h2>
+<h2>
+    {{AI_response}}
+</h2>
+{% endblock %}
