roba fabio a scuola 1/06/24

--- a/webapp/templates/dolly-3b.html
+++ b/webapp/templates/dolly-3b.html
@@ -1,12 +1,32 @@
 {% extends "base.html" %}
 {% block title %}Dolly 3b{% endblock %}
 {% block body %}
-this is the body of the Dolly 3b page
 <br>
-<form action="/dolly-3b" method="post">
-    <textarea rows="10" cols="50" name="prompt" placeholder="promt:"></textarea><br>
-    <input type="submit" value="submit">
-</form>
+<div class="row">
+    <div class="col-2"></div>
+    <div class="col-8">
+
+        <div class="form-floating">
+            <div class="row">
+                <div class="col-10">
+                    <textarea class="form-control" id="floatingTextarea2" style="height: 25px" name="prompt"
+                        placeholder="promt:" autofocus></textarea>
+
+                </div>
+                <div class="col-2">
+                    <button type="submit" class="btn btn-primary mb-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                            class="bi bi-send" viewBox="0 0 16 16">
+                            <path
+                                d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76z" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-2"></div>
+</div>
 <br>
 <h2>the AI says:</h2>
 <h2>
