--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -16,9 +16,9 @@
     gina sarà anche nelle altre se non capite guardate il video nel README
     -->
 
-<body data-bs-theme="dark">
+<body data-bs-theme="dark" class="w-100">
     <!--TODO: inserire una navbar-->
-    <header>
+    <header class="w-100">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <img src="https://www.aicorporation.com/wp-content/uploads/2019/02/ai-logo-blue-button-large-2015.png"
