--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -16,7 +16,7 @@
     gina sarà anche nelle altre se non capite guardate il video nel README
     -->
 
-<body data-bs-theme="dark" class="w-100">
+<body data-bs-theme="dark" class="w-100 h-100">
     <!--TODO: inserire una navbar-->
     <header class="w-100">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
