--- a/webapp/templates/dolly-3b.html
+++ b/webapp/templates/dolly-3b.html
@@ -3,23 +3,26 @@
 {% block body %}
 <br>
 <!--modulo con i messaggi!-->
+<h1 class="mx-2">Dolly-3b</h1>
 <div class="row w-100 mb-3">
     <div class="col-2"></div>
+
     <div class="col-8 bg-body-secondary rounded-4 px-0 py-4 d-flex flex-column">
 
-        <div class="d-flex  flex-row justify-content-end mb-3">
+        <div class="d-flex flex-row justify-content-end mb-3">
             <div class="p-3 py-2 bg-info rounded-start-4 text-black text-end text-wrap text-break" style="max-width: 70%;">
                 <h5>User</h5>
                 <span>User prompt</span>
             </div>
         </div>
 
-        <div class="d-flex  flex-row justify-content-start mb-3">
+        <div class="d-flex flex-row justify-content-start mb-3">
             <div class="p-3 py-2 bg-info-subtle rounded-end-4 text-start text-wrap text-break" style="max-width: 70%;">
                 <h5>Dolly 3b</h5>
-                <span>AI response</span>
+                <span>AI response:</span>
             </div>
         </div>
+        
     </div>
 
 </div>
@@ -27,9 +30,9 @@
 </div>
 
 <!--modulo con l'input!-->
-<div class="row w-100">
+<div class="row w-100 position-sticky bottom-0 bg-primary bg-opacity-50"> 
     <div class="col-2"></div>
-    <div class="col-8 p-0">
+    <div class="col-8 py-3">
 
         <form method="post" action="/dolly-3b" class="form-floating row w-100 m-0">
 
