--- a/webapp/templates/gpt-2.html
+++ b/webapp/templates/gpt-2.html
@@ -1,3 +1,60 @@
 {% extends "base.html" %}
 {% block title %}GPT-2{% endblock %}
-{% block body %}this is the body of the GPT-2 page{% endblock %}
+{% block body %}
+<br>
+<!--modulo con i messaggi!-->
+<h1 class="mx-2">GPT-2</h1>
+<div class="row w-100 mb-3">
+    <div class="col-2"></div>
+    <div class="col-8 bg-body-secondary rounded-4 px-0 py-4 d-flex flex-column">
+
+        <div class="d-flex  flex-row justify-content-end mb-3">
+            <div class="p-3 py-2 bg-info rounded-start-4 text-black text-end text-wrap text-break" style="max-width: 70%;">
+                <h5>User</h5>
+                <span>User prompt</span>
+            </div>
+        </div>
+
+        <div class="d-flex  flex-row justify-content-start mb-3">
+            <div class="p-3 py-2 bg-info-subtle rounded-end-4 text-start text-wrap text-break" style="max-width: 70%;">
+                <h5>GPT-2</h5>
+                <span>AI response:</span>
+            </div>
+        </div>
+
+        
+    </div>
+
+</div>
+<div class="col-2"></div>
+</div>
+
+<!--modulo con l'input!-->
+<div class="row w-100 position-sticky bottom-0 bg-primary bg-opacity-50">
+    <div class="col-2"></div>
+    <div class="col-8 py-3">
+
+        <form method="post" action="/dolly-3b" class="form-floating row w-100 m-0">
+
+            <div class="col-11 sticky-bottom p-0 m-0">
+                <textarea class="form-control border border-info rounded-end-0 rounded-start-4" name="prompt"
+                    placeholder="Scrivi qui" autofocus style="height: 3px;"></textarea>
+            </div>
+            <div class="col-1 m-0 p-0">
+
+                <button type="submit" class="btn btn-info p-0 m-0 w-100 h-100 rounded-start-0 rounded-end-4">
+                    <svg xmlns=" http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                        class="bi bi-send" viewBox="0 0 16 16">
+                        <path
+                            d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76z" />
+                    </svg>
+                </button>
+            </div>
+
+        </form>
+    </div>
+
+    <div class="col-2"></div>
+</div>
+<br>
+{% endblock %}
