riaggiunta la funzionalita alla pagina di dolly 3b

--- a/webapp/templates/dolly-3b.html
+++ b/webapp/templates/dolly-3b.html
@@ -19,7 +19,7 @@
         <div class="d-flex flex-row justify-content-start mb-3">
             <div class="p-3 py-2 bg-info-subtle rounded-end-4 text-start text-wrap text-break" style="max-width: 70%;">
                 <h5>Dolly 3b</h5>
-                <span>AI response:</span>
+                <span>{{AI_response}}</span>
             </div>
         </div>
         
