--- a/webapp/templates/dolly-3b.html
+++ b/webapp/templates/dolly-3b.html
@@ -7,22 +7,21 @@
 	<div class="col-2"></div>
 
 	<div class="col-8 bg-body-secondary rounded-4 px-0 py-4 d-flex flex-column" id="conversation-box">
-		{% conversation_array=conversation.split %}
-		{% for i in range(0,len(conversation_array),2) %}
-		<div class="d-flex flex-row justify-content-end mb-3">
-			<div class="p-3 py-2 bg-info rounded-start-4 text-black text-end text-wrap text-break"
-				style="max-width: 70%;">
-				<h5>User</h5>
-				<span>{% conversation_array[i] %}</span>
+		{% for qa in q_a %}
+			<div class="d-flex flex-row justify-content-end mb-3">
+				<div class="p-3 py-2 bg-info rounded-start-4 text-black text-end text-wrap text-break"
+					style="max-width: 70%;">
+					<h5>User</h5>
+					<span>{{ qa['q'] }}</span>
+				</div>
 			</div>
-		</div>
 
-		<div class="d-flex flex-row justify-content-start mb-3">
-			<div class="p-3 py-2 bg-info-subtle rounded-end-4 text-start text-wrap text-break" style="max-width: 70%;">
-				<h5>Dolly 3b</h5>
-				<span>{% conversation_array[i+1] %}</span>
+			<div class="d-flex flex-row justify-content-start mb-3">
+				<div class="p-3 py-2 bg-info-subtle rounded-end-4 text-start text-wrap text-break" style="max-width: 70%;">
+					<h5>Dolly 3b</h5>
+					<span>{{ qa['a'] }}</span>
+				</div>
 			</div>
-		</div>
 		{% endfor %}
 	</div>
 	<div class="col-2"></div>
@@ -33,7 +32,7 @@
 	<div class="col-2"></div>
 	<div class="col-8 py-3">
 		<form method="post" action="/dolly-3b" class="form-floating row w-100 m-0">
-			<input type="hidden" value="{{conversation}}" name="conversation" />
+			<input type="hidden" value="{{q_a}}" name="q_a" />
 			<div class="col-11 sticky-bottom p-0 m-0">
 				<textarea class="form-control border border-info rounded-end-0 rounded-start-4" name="prompt"
 					placeholder="Scrivi qui" autofocus style="height: 3px"></textarea>
