-nuova home -guida perfezionata

--- a/webapp/templates/guida.html
+++ b/webapp/templates/guida.html
@@ -4,7 +4,7 @@
 
 <div class="row my-4 mx-4">
     <div class="col-4 ">
-      <div id="list-example" class="list-group">
+      <div id="list-example" class="list-group position-fixed w-25">
         <a class="list-group-item list-group-item-action" href="#list-item-1">Dolly 3B AI</a>
         <a class="list-group-item list-group-item-action" href="#list-item-2">GPT-2</a>
         <a class="list-group-item list-group-item-action" href="#list-item-3">Stable Diffusion</a>
@@ -69,5 +69,4 @@
       </div>
     </div>
   </div>
-
 {% endblock %}
