--- a/webapp/templates/dolly-3b.html
+++ b/webapp/templates/dolly-3b.html
@@ -6,7 +6,7 @@
 <div class="row w-100 mb-3">
 	<div class="col-2"></div>
 
-	<div class="col-8 bg-body-secondary rounded-4 px-0 py-4 d-flex flex-column" id="conversation-box">
+	<div class="col-8 bg-body-secondary rounded-4 px-0 py-4 d-flex flex-column" id="conversation-box" style="min-height: 70vh;">
 		{% for qa in q_a %}
 			<div class="d-flex flex-row justify-content-end mb-3">
 				<div class="p-3 py-2 bg-info rounded-start-4 text-black text-end text-wrap text-break"
