--- a/webapp/templates/stable-diffusion.html
+++ b/webapp/templates/stable-diffusion.html
@@ -1,42 +1,27 @@
 {% extends "base.html" %}
-{% block title %}Satble Diffusion{% endblock %}
+{% block title %}Stable Diffusion{% endblock %}
 {% block body %}
 <br>
 <!--modulo con i messaggi!-->
- <h1 class="mx-2">Stable Diffusion</h1>
+<h1 class="mx-2">Stable Diffusion</h1>
 <div class="row w-100 mb-3">
     <div class="col-2"></div>
-    <div class="col-8 bg-body-secondary rounded-4 px-0 py-4 d-flex flex-column">
-
-        <div class="d-flex  flex-row justify-content-end mb-3">
-            <div class="p-3 py-2 bg-info rounded-start-4 text-black text-end text-wrap text-break" style="max-width: 70%;">
-                <h5>User</h5>
-                <span>User prompt</span>
-            </div>
-        </div>
-
-        <div class="d-flex  flex-row justify-content-start mb-3">
-            <div class="p-3 py-2 bg-info-subtle rounded-end-4 text-start text-wrap text-break" style="max-width: 70%;">
-                <h5>Stable Diffusion</h5>
-                <span></span>
-            </div>
-        </div>
+    <div class="col-8 bg-body-secondary rounded-4 px-0 py-4 d-flex flex-column" style="min-height: 70vh;">
+        <img src="../static/img/saved_img/{{image}}" alt="">
     </div>
-
-</div>
-<div class="col-2"></div>
+    <div class="col-2"></div>
 </div>
 
 <!--modulo con l'input!-->
 <div class="row w-100 position-sticky bottom-0 bg-primary bg-opacity-50">
     <div class="col-2"></div>
     <div class="col-8 py-3">
-
-        <form method="post" action="/dolly-3b" class="form-floating row w-100 m-0">
-
+        <form method="post" action="/stable-diffusion" class="form-floating row w-100 m-0">
             <div class="col-11 sticky-bottom p-0 m-0">
+
                 <textarea class="form-control border border-info rounded-end-0 rounded-start-4" name="prompt"
                     placeholder="Scrivi qui" autofocus style="height: 3px;"></textarea>
+
             </div>
             <div class="col-1 m-0 p-0">
 
@@ -47,8 +32,8 @@
                             d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76z" />
                     </svg>
                 </button>
-            </div>
 
+            </div>
         </form>
     </div>
 
